1) Mesh의 LoadMesh 함수 삭제 2) MeshLoad 클래스 구현 3) MeshData, MaterialData 구조체 생성 및 에셋매니저에 캐싱

--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="Source\Application\Source\EntityPool.cpp" />
     <ClCompile Include="Source\Application\Source\Material.cpp" />
     <ClCompile Include="Source\Application\Source\Mesh.cpp" />
+    <ClCompile Include="Source\Application\Source\MeshLoader.cpp" />
     <ClCompile Include="Source\Application\Source\PipelineManager.cpp" />
     <ClCompile Include="Source\Application\Source\Scene.cpp" />
     <ClCompile Include="Source\Application\Source\SceneManager.cpp" />
@@ -55,6 +56,7 @@
     <ClInclude Include="Source\Application\Header\Application.h" />
     <ClInclude Include="Source\Application\Header\Asset.h" />
     <ClInclude Include="Source\Application\Header\Material.h" />
+    <ClInclude Include="Source\Application\Header\MeshLoader.h" />
     <ClInclude Include="Source\Application\Header\Texture.h" />
     <ClInclude Include="Source\LKEngine.h" />
     <ClInclude Include="Source\TestScene.h" />
@@ -71,7 +73,7 @@
     <ClInclude Include="Source\Utility\Header\Macro.h" />
     <ClInclude Include="Source\Utility\Header\ManagedObject.h" />
     <ClInclude Include="Source\Utility\Header\TSingleton.h" />
-    <ClInclude Include="Source\Renderer\Header\VertexInformation.h" />
+    <ClInclude Include="Source\Application\Header\VertexInformation.h" />
     <ClInclude Include="Source\Renderer\Header\VulkanDescriptorSet.h" />
     <ClInclude Include="Source\Renderer\Header\VulkanBuffer.h" />
     <ClInclude Include="Source\Renderer\Header\VulkanCommandBuffers.h" />
